; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bridge/extr_br_device.c_br_dev_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bridge/extr_br_device.c_br_dev_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.net_bridge = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @br_dev_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @br_dev_open(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.net_bridge*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.net_bridge* @netdev_priv(%struct.net_device* %4)
  store %struct.net_bridge* %5, %struct.net_bridge** %3, align 8
  %6 = load %struct.net_bridge*, %struct.net_bridge** %3, align 8
  %7 = call i32 @br_features_recompute(%struct.net_bridge* %6)
  %8 = load %struct.net_device*, %struct.net_device** %2, align 8
  %9 = call i32 @netif_start_queue(%struct.net_device* %8)
  %10 = load %struct.net_bridge*, %struct.net_bridge** %3, align 8
  %11 = call i32 @br_stp_enable_bridge(%struct.net_bridge* %10)
  %12 = load %struct.net_bridge*, %struct.net_bridge** %3, align 8
  %13 = call i32 @br_multicast_open(%struct.net_bridge* %12)
  ret i32 0
}

declare dso_local %struct.net_bridge* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @br_features_recompute(%struct.net_bridge*) #1

declare dso_local i32 @netif_start_queue(%struct.net_device*) #1

declare dso_local i32 @br_stp_enable_bridge(%struct.net_bridge*) #1

declare dso_local i32 @br_multicast_open(%struct.net_bridge*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
